[tool.poetry]
name = "poetry-tool-versions-critical"
version = "0.1.0"
description = "Critical test: .tool-versions overrides pyproject.toml - Dependencies require Python 3.11+"
authors = ["Test <test@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# CRITICAL: These package versions REQUIRE Python >=3.9/3.10/3.11
# They CANNOT be installed with Python 3.8 - installation will fail
# Combined with vulnerabilities, wrong Python detection = missed vulnerabilities
numpy = {version = "==1.26.0", markers = "python_version >= '3.9'"}  # Requires Python >=3.9, won't work with 3.8
pillow = {version = "==9.3.0", markers = "python_version >= '3.11'"}  # CVE-2023-50447 - Arbitrary code execution
GitPython = {version = "==3.1.30", markers = "python_version >= '3.11'"}  # CVE-2023-40267 - Remote code execution
aiohttp = {version = "==3.8.5", markers = "python_version >= '3.11'"}  # CVE-2024-23334 - Directory traversal

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"